--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmfresh</title>
     <link rel="stylesheet" href="./styles/farmfresh_home.css">
+    <link rel="stylesheet" href="./styles/common_styles.css">
 </head>
 
 <body>
@@ -16,12 +17,12 @@
                 <div class="logo">
                     <img src="./images/Farm_fresh_logo.png" width="150px" height="120px">
                 </div>
-                <a href="./farmfresh_home.html" target="_self">Home</a>
-                <a href="./products.html" target="__blank">Products</a>
-                <a href="./recipies.html" target="__blank">Recipies</a>
-                <a href="./contact.html" target="__blank">Contact</a>
+                <a href="./index.html" target="_self">Home</a>
+                <a href="./html/products.html" target="__blank">Products</a>
+                <a href="./html/recipies.html" target="__blank">Recipies</a>
+                <a href="./html/contact_form.html" target="__blank">Contact</a>
             </nav>
-            
+
             <section class="hero_content">
                 <div class="hero_main_content">
                     <h1 class="title"> FARM FRESH</h1>
@@ -30,36 +31,36 @@
             </section>
         </div>
 
-        <section>
+        <section class="mindset_section">
             <p class="mindset_message"> No matter how your day looks like</p>
             <div class="mindset_segment">
-                <div class="empty_fridge" data-display="Empty_Fridge"> 
-                    <a href="./recipies.html"> 
-                        <img src="./images/EMpty_fridge.jpeg" alt="Empty_fridge_pic" width="100%" height="auto">
+                <div class="empty_fridge" data-display="Empty_Fridge">
+                    <a href="./products.html">
+                        <img src="./images/EMpty_fridge.jpeg" alt="Empty_fridge_pic" width="90%" height="auto">
                     </a>
                     <p> Empty Fridge? 😕 </p>
                     <span> Skip the line and have your groceries deliverd </span>
                 </div>
 
-                <div class="need_break" data-display="Need_a_Break"> 
-                    <a href=""> 
-                        <img src="./images/NeedABreak.jpeg" alt="Need_a_Break" width="100%" height="auto">
+                <div class="need_break" data-display="Need_a_Break">
+                    <a href="./products.html">
+                        <img src="./images/NeedABreak.jpeg" alt="Need_a_Break" width="90%" height="auto">
                     </a>
                     <p> Need a break? 🏃 </p>
                     <span> Some days quick solutions are required </span>
                 </div>
 
-                <div class="Celebration" data-display="Celebration"> 
-                    <a href=""> 
-                        <img src="./images/Celebration.jpeg" alt="Celebration" width="100%" height="auto">
+                <div class="Celebration" data-display="Celebration">
+                    <a href="./products.html">
+                        <img src="./images/Celebration.jpeg" alt="Celebration" width="90%" height="auto">
                     </a>
                     <p> Big Celebration! 🎉</p>
                     <span> Order till your heart is full </span>
                 </div>
 
-                <div class="feeling_tired" data-display="Feeling_Tired"> 
-                    <a href=""> 
-                        <img src="./images/feeling_Tred.jpeg" alt="Feeling_tired_pic" width="100%" height="auto">
+                <div class="feeling_tired" data-display="Feeling_Tired">
+                    <a href="./products.html">
+                        <img src="./images/feeling_Tred.jpeg" alt="Feeling_tired_pic" width="90%" height="auto">
                     </a>
                     <p> Feeling Tired? 🤷</p>
                     <span> Some days you feel like staying home </span>
@@ -94,16 +95,13 @@
                 <div class="places_city" data-city="Uppsala">
                     <img src="./images/CItites/uppsala.jpeg" alt="Uppsala_city_image">
                 </div>
-                <div class="places_city" data-city="Västerås">
-                    <img src="./images/CItites/vasteras.jpeg" alt="Västerås_city_image">
-                </div>
             </div>
         </section>
         </section>
     </div>
 
     <footer class="footer">
-        <img src="./images/social_media_icon/copyright.png" alt="copyright_icon"  height="auto" width="2%">
+        <img src="./images/social_media_icon/copyright.png" alt="copyright_icon" height="auto" width="1.75%">
         Copyright 2024
         <div class="footer_content">
             <div>Cutomer-Service</div>
