Updating few changes

--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -31,7 +31,7 @@
     <section class="main_content">
         <form action="mailto: vaishali.govindaraj28@gmail.com" enctype="text/plain" method="POST" class="user_form">
             <fieldset>
-                <legend> Your message for us🥗</legend>
+                <legend> Your feedback for us🥗</legend>
 
                 <label for="user_name"> Please Enter your name: </label>
                 <input type="text" name="user_name" id="user_name" class="user_name" placeholder="Enter your name" required>
