Updating links in Home page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="background_image">
 
             <nav class="nav_menu">
-                <div class="logo">
+                <a href="index.html" target="_self" class="logo">
                     <img src="./images/Farm_fresh_logo.png" width="150px" height="120px">
-                </div>
+                </a>
                 <a href="./index.html" target="_self">Home</a>
                 <a href="./html/products.html" target="__blank">Products</a>
                 <a href="./html/recipies.html" target="__blank">Recipies</a>
@@ -35,7 +35,7 @@
             <p class="mindset_message"> No matter how your day looks like</p>
             <div class="mindset_segment">
                 <div class="empty_fridge" data-display="Empty_Fridge">
-                    <a href="./products.html">
+                    <a href="./html/recipies.html">
                         <img src="./images/EMpty_fridge.jpeg" alt="Empty_fridge_pic" width="90%" height="auto">
                     </a>
                     <p> Empty Fridge? 😕 </p>
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="need_break" data-display="Need_a_Break">
-                    <a href="./products.html">
+                    <a href="./html/recipies.html">
                         <img src="./images/NeedABreak.jpeg" alt="Need_a_Break" width="90%" height="auto">
                     </a>
                     <p> Need a break? 🏃 </p>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="Celebration" data-display="Celebration">
-                    <a href="./products.html">
+                    <a href="./html/recipies.html">
                         <img src="./images/Celebration.jpeg" alt="Celebration" width="90%" height="auto">
                     </a>
                     <p> Big Celebration! 🎉</p>
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="feeling_tired" data-display="Feeling_Tired">
-                    <a href="./products.html">
+                    <a href="./html/recipies.html">
                         <img src="./images/feeling_Tred.jpeg" alt="Feeling_tired_pic" width="90%" height="auto">
                     </a>
                     <p> Feeling Tired? 🤷</p>
