--- a/html/products.html
+++ b/html/products.html
@@ -13,9 +13,9 @@
     <div class="product">
         <div class="background_image">
             <nav class="nav_menu">
-                <div class="logo">
+                <a href="../index.html" target="_self" class="logo">
                     <img src="../images/Farm_fresh_logo.png" width="150px" height="120px">
-                </div>
+                </a>
                 <a href="../index.html" target="_self">Home</a>
                 <a href="./products.html" target="__blank">Products</a>
                 <a href="./recipies.html" target="__blank">Recipies</a>
