updating Nav links

--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -15,9 +15,9 @@
                 <img src="../images/Farm_fresh_logo.png" width="120px" height="95px">
             </div>
             <a href="../index.html" target="_self">Home</a>
-            <a href="./products.html" target="__blank">Products</a>
-            <a href="./recipies.html" target="__blank">Recipies</a>
-            <a href="./contact_form.html" target="__blank">Contact</a>
+            <a href="./products.html" target="_self">Products</a>
+            <a href="./recipies.html" target="_self">Recipies</a>
+            <a href="./contact_form.html" target="_self" class="active">Contact</a>
         </nav>
 
         <section class="hero_content">
