--- a/html/products.html
+++ b/html/products.html
@@ -17,9 +17,9 @@
                     <img src="../images/Farm_fresh_logo.png" width="150px" height="120px">
                 </a>
                 <a href="../index.html" target="_self">Home</a>
-                <a href="./products.html" target="__blank">Products</a>
-                <a href="./recipies.html" target="__blank">Recipies</a>
-                <a href="./contact_form.html" target="__blank">Contact</a>
+                <a href="./products.html" target="_self" class="active">Products</a>
+                <a href="./recipies.html" target="_self">Recipies</a>
+                <a href="./contact_form.html" target="_self">Contact</a>
             </nav>
 
             <section class="hero_content">
