--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <a href="index.html" target="_self" class="logo">
                     <img src="./images/Farm_fresh_logo.png" width="150px" height="120px">
                 </a>
-                <a href="./index.html" target="_self">Home</a>
-                <a href="./html/products.html" target="__blank">Products</a>
-                <a href="./html/recipies.html" target="__blank">Recipies</a>
-                <a href="./html/contact_form.html" target="__blank">Contact</a>
+                <a href="./index.html" target="_self" class="active">Home</a>
+                <a href="./html/products.html" target="_self">Products</a>
+                <a href="./html/recipies.html" target="_self">Recipies</a>
+                <a href="./html/contact_form.html" target="_self">Contact</a>
             </nav>
 
             <section class="hero_content">
