Modifying all changes

--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -22,7 +22,7 @@
 
         <section class="hero_content">
             <div class="hero_main_content">
-                <h1 class="title"> FARM FRESH</h1>
+                <h1 class="title"> Contact</h1>
                 <span class="message">Your order is minutes from your door</span>
             </div>
         </section>
