--- a/html/products.html
+++ b/html/products.html
@@ -24,7 +24,7 @@
 
             <section class="hero_content">
                 <div class="hero_main_content">
-                    <h1 class="title"> FARM FRESH</h1>
+                    <h1 class="title">  Products</h1>
                     <span class="message">Your order is minutes from your door</span>
                 </div>
             </section>
@@ -42,42 +42,42 @@
         <section class="category_content">
             <h3 class="category_head">Fruits and Vegetables</h3>
             <section id="fruits_veg" class="section_content">
-                <img src="../images/products/fruits_veg/beetroot.avif" height="182" width="200">
-                <img src="../images/products/fruits_veg/broccoli.avif" height="182" width="200">
-                <img src="../images/products/fruits_veg/capsicum.avif" height="182" width="200">
-                <img src="../images/products/fruits_veg/eggplant.avif" height="182" width="200">
-                <img src="../images/products/fruits_veg/lettuce.avif" height="182" width="200">
-                <img src="../images/products/fruits_veg/tomatoes.avif" height="182" width="200">
+                <div class="image_holder"><img src="../images/products/fruits_veg/beetroot.avif" ></div>
+                <div class="image_holder"><img src="../images/products/fruits_veg/broccoli.avif"  ></div>
+                <div class="image_holder"><img src="../images/products/fruits_veg/capsicum.avif"  ></div>
+                <div class="image_holder"><img src="../images/products/fruits_veg/eggplant.avif"  ></div>
+                <div class="image_holder"><img src="../images/products/fruits_veg/lettuce.avif"  ></div>
+                <div class="image_holder"><img src="../images/products/fruits_veg/tomatoes.avif"  ></div>
             </section>
 
             <h3 class="category_head">Bread and bakery</h3>
             <section id="bread_bakery" class="section_content">
-                <img src="../images/products/bread_bakery/bread.avif" height="182" width="200">
-                <img src="../images/products/bread_bakery/Crispbread.avif" height="182" width="200">
-                <img src="../images/products/bread_bakery/Kardamom_crusts.avif" height="182" width="200">
-                <img src="../images/products/bread_bakery/Poppyseed_crispbread.avif" height="182" width="200">
-                <img src="../images/products/bread_bakery/Sandwich_bread.avif" height="182" width="200">
-                <img src="../images/products/bread_bakery/Sesame_cookies.avif" height="182" width="200">
+                <div class="image_holder"><img src="../images/products/bread_bakery/bread_large.jpg"></div>
+                <div class="image_holder"><img src="../images/products/bread_bakery/soft_bread.jpg"></div>
+                <div class="image_holder"><img src="../images/products/bread_bakery/bread_slices.jpg"></div>
+                <div class="image_holder"><img src="../images/products/bread_bakery/cookies.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/bread_bakery/croissant.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/bread_bakery/fermented_bread.jpg" ></div>
             </section>
 
             <h3 class="category_head">Pantry </h3>
             <section id="pantry" class="section_content">
-                <img src="../images/products/pantry/barilla_pasta.avif" height="182" width="200">
-                <img src="../images/products/pantry/pasta.avif" height="182" width="200">
-                <img src="../images/products/pantry/pasta_mezze.avif" height="182" width="200">
-                <img src="../images/products/pantry/pasta_penne.avif" height="182" width="200">
-                <img src="../images/products/pantry/pasta_sauce.avif" height="182" width="200">
-                <img src="../images/products/pantry/barilla_pasta.avif" height="182" width="200">
+                <div class="image_holder"><img src="../images/products/pantry/bow_pasta.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/pantry/coloured_spiral_pasta.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/pantry/stick_pasta.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/pantry/orange_spiral_pasta.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/pantry/color_pasta.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/pantry/plain_spiral_pasta.jpg"  ></div>
             </section>
 
             <h3 class="category_head">Icecream and Sweet</h3>
             <section id="icecream_sweets" class="section_content">
-                <img src="../images/products/sweet_icecream/cahew_mix.avif" height="182" width="200">
-                <img src="../images/products/sweet_icecream/icrecream_choco_fudge.avif" height="182" width="200">
-                <img src="../images/products/sweet_icecream/ferrero_rocher.avif" height="182" width="200">
-                <img src="../images/products/sweet_icecream/Nutmix.avif" height="182" width="200">
-                <img src="../images/products/sweet_icecream/onion_rings.avif" height="182" width="200">
-                <img src="../images/products/sweet_icecream/peanut_rings.avif" height="182" width="200">
+                <div class="image_holder"><img src="../images/products/sweet_icecream/choco_sauce_cold.jpg"></div>
+                <div class="image_holder"><img src="../images/products/sweet_icecream/chocobar.jpg"></div>
+                <div class="image_holder"><img src="../images/products/sweet_icecream/chocolate_icebowl.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/sweet_icecream/flavour_bowl.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/sweet_icecream/flavoured_icebar.jpg"  ></div>
+                <div class="image_holder"><img src="../images/products/sweet_icecream/strawberry_icebar.jpg"  ></div>
             </section>
         </section>
 
