--- a/html/recipies.html
+++ b/html/recipies.html
@@ -24,14 +24,14 @@
 
             <section class="hero_content">
                 <div class="hero_main_content">
-                    <h1 class="title"> FARM FRESH</h1>
+                    <h1 class="title"> Recipies</h1>
                     <span class="message">Your order is minutes from your door</span>
                 </div>
             </section>
         </div>
 
         <div class="recipies_intro">
-            <h1 class="tagline"> What do you feel like for dinner? 🍛</h1>
+            <h2 class="tagline"> What do you feel like for dinner? 🍛</h2>
         </div>
 
         <section class="weekly_special_section">
